# last-run

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.bak  LICENSE  Makefile  README.md  Taskfile.yml  build.rs  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/actions/setup-go/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: auto-merge.yml  build.yml  builder.yml  homebrew.yml  test.yml
cmd/lastrun/: main.go
docs/: ARCHITECTURE.md
examples/: basic_usage.sh  cron_integration.sh
internal/apperr/: apperr.go  apperr_test.go
internal/cli/: cli.go  cli_test.go
internal/config/: config.go  config_test.go
internal/db/: db.go  db_test.go  helpers_test.go  integration_test.go
internal/display/: colors.go  json.go  table.go
internal/format/: format.go  format_test.go
internal/model/: model.go
internal/settings/: settings.go  settings_test.go
internal/tui/: tui.go  view.go  view_test.go
internal/tuiutil/: tuiutil.go
internal/version/: version.go  version_test.go
packaging/homebrew/: lastrun.rb
src/: cli.rs  db.rs  display.rs  error.rs  format.rs  lib.rs  main.rs  model.rs
src/display/: json.rs  mod.rs  settings.rs  table.rs  tui.rs
tests/: cli_tests.rs  error_tests.rs  format_tests.rs  helper.rs  integration_tests.rs  unit_tests.rs  version_tests.rs
