[package]
name = "lastrun"
version = "0.2.0"
edition = "2021"
authors = ["Eric Veenendaal"]
description = "A utility to track when tasks were last run"
license = "MIT"
repository = "https://github.com/eveenendaal/last-run"
readme = "README.md"
keywords = ["cli", "task-tracking", "monitoring", "cron"]
categories = ["command-line-utilities"]

[dependencies]
rusqlite = "0.38.0"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
thiserror = "2.0.17"
prettytable-rs = "0.10.0"
serde_json = "1.0.145"
clap_complete = "4.5.61"
