[package]
name = "lastrun"
version = "0.2.0"
edition = "2021"
authors = ["Eric Veenendaal"]
description = "A utility to track when tasks were last run"
license = "MIT"
repository = "https://github.com/eveenendaal/last-run"
readme = "README.md"
keywords = ["cli", "task-tracking", "monitoring", "cron"]
categories = ["command-line-utilities"]

[dependencies]
rusqlite = "0.40.0"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
thiserror = "2.0.18"
prettytable-rs = "0.10.0"
serde_json = "1.0.150"
clap_complete = "4.6.5"
ratatui = "0.30"
crossterm = "0.29"
